tests/baselines/reference/parserObjectType5(strict=true).errors.txt
parserObjectType5.ts(2,7): error TS2304: Cannot find name 'B'.
parserObjectType5.ts(3,4): error TS7020: Call signature, which lacks return-type annotation, implicitly has an 'any' return type.
parserObjectType5.ts(3,7): error TS1005: '(' expected.


==== parserObjectType5.ts (3 errors) ====
    var v: {
       A: B
          ~
!!! error TS2304: Cannot find name 'B'.
       <T>;
       ~~~~
!!! error TS7020: Call signature, which lacks return-type annotation, implicitly has an 'any' return type.
          ~
!!! error TS1005: '(' expected.
    };